# hermes

./: 404.html  Cargo.toml  flake.nix  glossary.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: cargo-doc.yaml  docker.yml  guide-templates.yaml  integration.yaml  misbehaviour.yml  multi-chains.yaml  namada.yaml  namada.yml  publish.yml  release.yml  rust.yml
advanced/: features.html  index.html
advanced/troubleshooting/: clock-drift.html  cross-comp-config.html  gas-errors.html  genesis-restart.html  help-command.html  index.html  inspect.html  log-level.html  patch-gaia.html  profiling.html
ci/release/: hermes.Dockerfile
crates/chain-registry/: Cargo.toml
crates/chain-registry/src/: error.rs  querier.rs
crates/relayer/: Cargo.toml
crates/relayer-cli/: Cargo.toml
crates/relayer-cli/src/commands/keys/: add.rs  delete.rs
crates/relayer-rest/: Cargo.toml
crates/relayer-rest/tests/: mock.rs
crates/relayer-types/: Cargo.toml
crates/relayer-types/src/: events.rs  test_utils.rs
crates/relayer-types/src/applications/ics29_fee/: events.rs
crates/relayer-types/src/applications/ics31_icq/: events.rs  response.rs
crates/relayer-types/src/core/ics02_client/: events.rs
crates/relayer-types/src/core/ics03_connection/: events.rs
crates/relayer-types/src/core/ics04_channel/: events.rs
crates/relayer-types/src/core/ics23_commitment/: merkle.rs
crates/relayer/src/: chain.rs  config.rs  error.rs  event.rs  foreign_client.rs  keyring.rs  upgrade_chain.rs
crates/relayer/src/chain/: cosmos.rs  namada.rs
crates/relayer/src/chain/cosmos/: config.rs  fee.rs  gas.rs  query.rs  tx.rs  wait.rs
crates/relayer/src/chain/cosmos/query/: custom.rs  tx.rs
crates/relayer/src/chain/cosmos/types/events/: fee.rs
crates/relayer/src/chain/namada/: error.rs  query.rs  tx.rs
crates/relayer/src/config/: types.rs
crates/relayer/src/link/: pending.rs  tx_hashes.rs
crates/telemetry/: Cargo.toml
documentation/: rest-api.html
documentation/commands/: config.html  global.html  index.html
documentation/commands/fee/: index.html  register-counterparty-payee.html  register-payee.html  transfer.html
documentation/commands/keys/: index.html
documentation/commands/listen/: index.html
documentation/commands/logs/: index.html
documentation/commands/misbehaviour/: index.html
documentation/commands/path-setup/: channels.html  clients.html  connections.html  index.html
documentation/commands/queries/: channel.html  client.html  connection.html  index.html  packet.html  transfer.html  tx.html
documentation/commands/relaying/: clear.html  handshakes.html  index.html  packets.html
documentation/commands/tx/: channel-close.html  channel-open.html  connection.html  index.html  packet.html  upgrade.html
documentation/commands/upgrade/: index.html  test.html
documentation/configuration/: comet-compat-mode.html  configure-hermes.html  description.html  dynamic-gas-fees.html  filter-incentivized.html  index.html  packet-clearing.html  performance.html
documentation/forwarding/: index.html  legacy_test.html  test.html
documentation/telemetry/: index.html  integration.html  operators.html
e2e/: namada-cosmos-transfers  namada-cw721-transfer  namada-e2e-test  namada-gaia-simple-transfers  namada-shielded-transfers  namada-simple-transfers  namada-stargaze-transfer
e2e/e2e/: packet.py
quick-start/: index.html  installation.html  pre-requisites.html
scripts/: join-namada.sh  one-chain  setup-namada  setup-namada-single-node  setup-namada.sh
tools/check-guide/: Cargo.toml
tools/integration-test/src/tests/: ica.rs
tools/test-framework/: Cargo.toml
tools/test-framework/src/bootstrap/: single.rs
tools/test-framework/src/util/: interchain_security.rs  namada.rs
tutorials/: index.html
tutorials/local-chains/: add-a-new-relay-path.html  index.html  start-local-chains.html  start-relaying.html
tutorials/more-chains/: build-the-topology.html  concurrent-instances.html  index.html  start-local-chains.html  start-relaying.html
tutorials/pre-requisites/: gaia.html  gaiad-manager.html  index.html
tutorials/production/: index.html  setup-grafana.html  setup-hermes.html  start-relaying.html
