[package]
name         = "ibc-chain-registry"
version      = "0.22.0"
edition      = "2021"
license      = "Apache-2.0"
keywords     = ["cosmos", "ibc", "relayer", "chain", "registry"]
repository   = "https://github.com/informalsystems/hermes"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.65"
description  = """
    Service to fetch data from the chain-registry
"""

[dependencies]
ibc-proto         = { git = "https://github.com/heliaxdev/ibc-proto-rs.git", rev = "bb16e17a4d9260d5f20516a8eda43fa52377fad2"}
ibc-relayer-types = { version = "0.22.0", path = "../relayer-types", features = ["std"] }
tendermint-rpc    = {features = ["http-client", "websocket-client"],  git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "b7d1e5afc6f2ccb3fd1545c2174bab1cc48d7fa7" }

async-trait = "0.1.64"
flex-error  = { version = "0.4.4", default-features = false }
futures     = { version = "0.3.26", features = ["executor"] }
http        = "0.2"
reqwest     = { version = "0.11.13", features = ["rustls-tls", "json"], default-features = false }
serde       = "1.0.149"
serde_json  = "1"
tokio       = "1.17.0"
tracing     = "0.1.36"
